// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`support functions work correctly isPowerOfTwo validates numbers correctly returns the expected answer 1`] = `
Array [
  false,
  false,
  true,
  false,
  true,
  false,
  true,
  false,
  false,
  true,
  false,
  false,
]
`;

exports[`support functions work correctly previousPowerOfTwo retuns the immediate power of two less than the input returns valid powers of two 1`] = `
Array [
  2,
  2,
  4,
  16,
  0,
  0,
]
`;
